Linked font awesome

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"
-          content="Web site created using create-react-app" />
+          content="LIFE" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
+    <!-- Flatpickr styles -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fontawesome/css/all.min.css">
 
     <title>LiFE</title>
 </head>
